# i18n-agent-skill

./: .coverage  .gitignore  .i18n-cache.json  .i18n-skill.json  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SKILL.en.md  SKILL.md  exec-log.txt  i18n-lifecycle-diagram.html  index.html  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  skill.json  vite.config.ts
.github/workflows/: check.yml  ci.yml  deploy.yml
assets/: glossary-template.json  index-8of1eLIp.css  index-B6aTYGfd.js  index-BEL2cDkp.js  index-BXa3iL9M.js  index-BZPuBnCN.js  index-BcdHcw9i.css  index-C6eoeag7.css  index-CD8LbwhP.css  index-Cinf3Z4F.js  index-CjeRsMHG.js  index-Co_bauop.js  index-CsdNlMAq.js  index-CzJzxWSE.js  index-D-bsFgXO.js  index-DwVeej5d.js  index-G16UTGRg.js  index-QiNKokxV.js  index-f0paaDu8.js  index-lZJTO_gN.js  index-mhd--lPX.js  index-pGmhrr6Y.js  index-pY3CcDms.css
docs/: ROADMAP.md
examples/: basic_usage.py
i18n_agent_skill/: __init__.py  __main__.py  linter.py  logger.py  mcp_server.py  models.py  prompts.py  snapshot.py  tools.py  vcs.py
references/: ast-engine.md  cleanup-guide.md  linter-rules.md  privacy-guard.md  product-scenarios.md
scratch/test_project/: .gitignore  en.json
scripts/: bootstrap.ps1  check.py  cleanup.ps1  cleanup.sh  i18n-cli.py  install-skill.sh  install.py
src/: App.tsx  i18n.ts  index.css
src/components/: AuditEngine.tsx  DataParticle.tsx  FinalEvolution.tsx  Hero.tsx  LanguageSwitcher.tsx  PrivacyPool.tsx  ScannerStation.tsx
src/hooks/: useScrollProgress.ts
src/locales/: en.json  zh.json
src/theme/: vars.css
tests/: test_ast_engine_v2.py  test_cleanup_logic.py  test_core_integration.py  test_coverage_boost.py  test_dead_keys.py  test_evolution.py  test_linter.py  test_linter_masking.py  test_locale_parsing.py  test_privacy.py  test_snapshot.py  test_snapshot_resilience.py  test_tools.py  test_utils.py  test_vue_engine.py
