[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i18n-agent-skill"
version = "0.1.0"
description = "An AI-powered i18n automation toolset for React/Vue projects."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shirolin", email = "shiro@example.com"}
]
keywords = ["i18n", "ai", "agent", "google-adk", "translation", "mcp"]
dependencies = [
    "google-adk>=0.1.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "mcp>=1.0.0",
    "python-json-logger>=2.0.7",
    "tree-sitter>=0.21.3",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-languages"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.0",
    "types-aiofiles"
]

[tool.setuptools]
packages = ["i18n_agent_skill"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] # 包含常规错误、格式、Bug、导入顺序检查

[tool.mypy]
# 类型检查配置：保持 3.10 兼容
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = ["tests", "examples", "build", "dist"]

[project.urls]
"Homepage" = "https://github.com/Shirolin/i18n-agent-skill"
"Bug Tracker" = "https://github.com/Shirolin/i18n-agent-skill/issues"
