[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i18n-agent-skill"
version = "0.2.0"
description = "An AI-powered i18n automation toolset for React/Vue projects."
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [
    {name = "Shirolin", email = "shiro@example.com"}
]
license = {text = "Apache-2.0"}
keywords = ["i18n", "ai", "agent", "google-adk", "translation", "mcp"]
dependencies = [
    "google-adk>=0.1.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "PyYAML>=6.0.0",
    "mcp>=1.0.0",
    "python-json-logger>=2.0.7",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack"
]

[project.scripts]
i18n-agent-skill = "i18n_agent_skill.__main__:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.0",
    "types-aiofiles",
    "types-PyYAML"
]

[tool.i18n-agent-skill]
validate = "python .agents/skills/agent-skill-creator/scripts/validate.py ."
scan = "python .agents/skills/agent-skill-creator/scripts/security_scan.py ."

[tool.setuptools]
packages = ["i18n_agent_skill"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP"] # 增加命名规范(N)和语法升级建议(UP)
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.10"
# 实用主义配置：不强制全量标注，但有标注的地方必须正确
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = ["examples", "build", "dist", "scratch"]

[project.urls]
"Homepage" = "https://github.com/Shirolin/i18n-agent-skill"
"Bug Tracker" = "https://github.com/Shirolin/i18n-agent-skill/issues"
